@@ -35,9 +35,9 @@
 </dependencies>
 
 <profiles>
-	<!-- PROD -->
+	<!-- BUILD -->
 	<profile>
-		<id>prod</id>
+		<id>build</id>
 		<activation>
             <activeByDefault>true</activeByDefault>
         </activation>
@@ -45,196 +45,44 @@
 			<finalName>apgupdater</finalName>
 			<plugins>
 			
-				<!-- ADDING GENERATED SOURCES TO COMPILE -->
+				<!-- Make this jar executable and MERGE dependencies-->
 				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>build-helper-maven-plugin</artifactId>
-					<version>3.0.0</version>
-					<executions>
-						<execution>
-							<id>add-source</id>
-							<phase>generate-sources</phase>
-							<goals>
-								<goal>add-source</goal>
-							</goals>
-							<configuration>
-								<sources>
-									<source>${basedir}/src/main/generated</source>
-								</sources>
-							</configuration>
-						</execution>
-					</executions>
-				</plugin>
-				
-				<!-- COPYING and MOVING FILES -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-resources-plugin</artifactId>
-					<version>2.6</version>
-					<executions>
-					    <execution>
-					        <id>copy-resources</id>
-					        <phase>process-resources</phase>
-					        <goals>
-					            <goal>copy-resources</goal>
-					        </goals>
-					        <configuration>
-					        	<overwrite>true</overwrite>
-					            <outputDirectory>${basedir}/target/classes</outputDirectory>
-					            <resources>
-					                <resource>
-					                    <directory>${basedir}/src/main/resources/prod</directory>
-					                    <includes>
-					                        <include>*</include>
-					                    </includes>
-					                </resource>
-					            </resources>
-					        </configuration>
-					    </execution>
-					</executions>
-				</plugin>
-				
-			</plugins>
-		</build>
-	</profile>
-	<!-- /PROD -->
-
-	<!-- TEST -->
-	<profile>
-		<id>test</id>
-		<build>
-			<finalName>apgupdater</finalName>
-			<plugins>
-			
-				<!-- ADDING GENERATED SOURCES TO COMPILE -->
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>build-helper-maven-plugin</artifactId>
-					<version>3.0.0</version>
-					<executions>
-						<execution>
-							<id>add-source</id>
-							<phase>generate-sources</phase>
-							<goals>
-								<goal>add-source</goal>
-							</goals>
-							<configuration>
-								<sources>
-									<source>${basedir}/src/main/generated</source>
-								</sources>
-							</configuration>
-						</execution>
-					</executions>
-				</plugin>
-				
-				<!-- COPYING and MOVING FILES -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-resources-plugin</artifactId>
-					<version>2.6</version>
-					<executions>
-					    <execution>
-					        <id>copy-resources</id>
-					        <phase>process-resources</phase>
-					        <goals>
-					            <goal>copy-resources</goal>
-					        </goals>
-					        <configuration>
-					        	<overwrite>true</overwrite>
-					            <outputDirectory>${basedir}/target/classes</outputDirectory>
-					            <resources>
-					                <resource>
-					                    <directory>${basedir}/src/main/resources/test</directory>
-					                    <includes>
-					                        <include>*</include>
-					                    </includes>
-					                </resource>
-					            </resources>
-					        </configuration>
-					    </execution>
-					</executions>
-				</plugin>
-				
-			</plugins>
-		</build>
-	</profile>
-	<!-- /TEST -->
-	
-	<!-- DEV -->
-	<profile>
-		<id>dev</id>
-		<build>
-			<finalName>apgupdater</finalName>
-			<plugins>
-			
-				<!-- ADDING GENERATED SOURCES TO COMPILE -->
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>build-helper-maven-plugin</artifactId>
-					<version>3.0.0</version>
-					<executions>
-						<execution>
-							<id>add-source</id>
-							<phase>generate-sources</phase>
-							<goals>
-								<goal>add-source</goal>
-							</goals>
-							<configuration>
-								<sources>
-									<source>${basedir}/src/main/generated</source>
-								</sources>
-							</configuration>
-						</execution>
-					</executions>
-				</plugin>
-				
-				<!-- COPYING and MOVING FILES -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-resources-plugin</artifactId>
-					<version>2.6</version>
-					<executions>
-					    <execution>
-					        <id>copy-resources</id>
-					        <phase>process-resources</phase>
-					        <goals>
-					            <goal>copy-resources</goal>
-					        </goals>
-					        <configuration>
-					        	<overwrite>true</overwrite>
-					            <outputDirectory>${basedir}/target/classes</outputDirectory>
-					            <resources>
-					                <resource>
-					                    <directory>${basedir}/src/main/resources/prod</directory>
-					                    <includes>
-					                        <include>*</include>
-					                    </includes>
-					                </resource>
-					            </resources>
-					        </configuration>
-					    </execution>
-					</executions>
-				</plugin>
-				
-				<!-- Maven Tomcat7 plugin -->
-				<plugin>
-					<groupId>org.apache.tomcat.maven</groupId>
-					<artifactId>tomcat7-maven-plugin</artifactId>
-					<version>2.2</version>
+					<artifactId>maven-assembly-plugin</artifactId>
+					<version>2.4.1</version>
 					<configuration>
-						<path>/${project.build.finalName}</path>
-						<port>8080</port>
-						<contextReloadable>true</contextReloadable>
-						<!--systemProperties>
-							<JAVA_OPTS>-Xms256m -Xmx1024m -XX:+DisableExplicitGC -Dcom.sun.management.jmxremote -XX:PermSize=256m -XX:MaxPermSize=512m</JAVA_OPTS>
-							<MAVEN_OPTS>-Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000</MAVEN_OPTS>
-						</systemProperties-->
+						<descriptorRefs>
+							<descriptorRef>jar-with-dependencies</descriptorRef>
+						</descriptorRefs>
+						<archive>
+							<manifest>
+								<mainClass>it.giunti.apg.updater.Main</mainClass>
+							</manifest>
+						</archive>
+					</configuration>
+					<executions>
+						<execution>
+							<id>make-assembly</id>
+							<phase>package</phase> 
+							<goals>
+								<goal>single</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+						
+				<!-- skip tests -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.19.1</version>
+					<configuration>
+						<skipTests>true</skipTests>
 					</configuration>
 				</plugin>
 				
 			</plugins>
 		</build>
 	</profile>
-	<!-- /DEV -->
+	<!-- /build -->
 </profiles>
 </project>
